--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,21 @@
   padding: 0;
   box-sizing: border-box;
 }
+@media (max-width: 640px) {
+.header {
+    background-image: url(../images/banner-mobile.jpg);
+ }
+}
+@media (min-width: 641px) and (max-width: 1199px) {
+.header {
+  background-image: url(../images/banner-bg-tablet.jpg);
+ }
+}
+@media (min-width: 1200px) {
+.header {
+    background-image: url(../images/banner-bg.jpg);
+ }
+}
 
 .header {
   position: relative;
@@ -29,71 +44,289 @@
   z-index: 1;
 }
 .header::after {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.6);
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 2;
+content: "";
+background-color: rgba(0, 0, 0, 0.6);
+position: absolute;
+ top: 0;
+left: 0;
+right: 0;
+bottom: 0;
+}
+
+@media (min-width: 641px) and (max-width: 1199px) {
+.container {
+  padding: 0 35px;
+  margin: 0;
+ }
+}
+.container {
+  max-width: 100%;
+  margin: auto;
+  padding: 0 15px;
+  z-index: 1;
+  position: relative;
 }
 
 .header-information {
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
+max-width: 1200px;
+margin-left: auto;
+margin-right: auto;
+z-index: 3;
+text-align: center;
+}
 
-  z-index: 3;
-  text-align: center;
-}
 .header-communication {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 28px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding-top: 28px;
 }
+
+@media (max-width: 640px) {
+.header-communication {
+ align-items: flex-start;
+ }
+}
+
+@media (max-width: 640px){
+.panel-logo {
+ margin: auto;
+ }
+}
+.panel-logo {
+padding: 30px 530px 0 0;
+}
+@media (max-width: 640px) {
 .logo {
-  width: 179px;
+  width: 269px;
+  height: 61px;
+  margin-top: 120px;
+  }
 }
+
+@media (min-width: 641px) and (max-width: 1199px) {
+.logo {
+  width: 158px;
+  height: 36px;
+  margin-top: 20px;
+  }
+}
+
+@media (min-width: 1200px) {
+.logo {
+  width: 158px;
+  height: 36px;
+  margin-top: 20px;
+  }
+}
+
+@media (max-width: 640px){
+.nav {
+  position: absolute;
+  right: 0;
+ }
+}
+
+.nav {
+  display: block ;
+}
+@media (max-width: 640px){
+.nav-button {
+   left: -15px;
+ }
+}
+@media (min-width: 1200px) {
+.nav-button {
+ display: none;
+ }
+}
+.nav-button {
+  width: 1.4em;
+  height: 1em;
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  font-size: 25px;
+  position: relative;
+  text-indent: -9999px;
+  cursor: pointer;
+}
+
+.nav-button::before, .nav-button::after {
+  content: "";
+  width: 100%;
+  height: 25%;
+  border-radius: 5px;
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+}
+.nav-button::before {
+top: 0;
+}
+.nav-button::after {
+  bottom: -5px;
+}
+.button {
+  -webkit-writing-mode: horizontal-tb !important;
+  font-style: ;
+  font-variant-ligatures: ;
+  font-variant-caps: ;
+  font-variant-numeric: ;
+  font-variant-east-asian: ;
+  font-weight: ;
+  font-stretch: ;
+  font-size: ;
+  font-family: ;
+  text-rendering: auto;
+  color: -internal-light-dark(black, white);
+  letter-spacing: normal;
+  word-spacing: normal;
+  line-height: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  text-align: center;
+  cursor: default;
+}
+.menu-button-label {
+  width: 100%;
+  height: 25%;
+  border-radius: 5px;
+  background-color: #ffffff;
+  position: absolute;
+  left: 0;
+}
+
 .menu {
   font-family: open-sans-r, sans-serif;
 }
+
+@media (max-width: 1199px) {
 .menu-list {
+   display: none;
+  }
+ }
+
+.menu-list {
+ padding-left: 0;
+  padding-top: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style: none;
   display: flex;
-  list-style-type: none;
-  font-family: open-sans-r, sans-serif;
+  flex-wrap: wrap;
+  justify-content: flex-end;
 }
+
 .menu-list-item {
-  font-size: 13px;
-  padding-left: 31px;
-  color: #ffffff; 
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.first-heading {
   display: block;
-  padding: 105px 220px 202px 220px;
+  font-size: 13px;
+  color: #ffffff;
+  font-weight: 400;
+  font-family: OpenSans-Regular, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  }
+
+.nav-item:nth-child(n + 2) {
+  list-style-type: none;
+  margin-left: 35px;
+  }
+
+ @media (max-width: 640px){
+ .first-heading {
+  padding-top: 1em;
+  font-size: 26px;
+  width: 80%;
+  padding-bottom: 120px;
+  }
+}
+
+@media (min-width: 641px) and (max-width: 1199px) {
+.first-heading {
+  padding-top: 1em;
+  font-size: 40px;
+  width: 80%;
+  padding-bottom: 120px;
+  }
+}
+
+@media (min-width: 1200px) {
+.first-heading {
+  max-width: 680px;
+ }
+}
+@media (max-width: 640px) {
+.header-welcome {
+    width: 80%;
+ }
+}
+.header-welcome {
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  }
+
+.first-heading {
+display: block;
+padding: 130px 0;
   
   font-family: open-sans-b, sans-serif;
   color: #ffffff;
   font-size: 45px;
   line-height: 1.65;
   text-transform: uppercase;
-}
-
-.pagination {
-  width: 1170px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
+
+.pagination {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+@media (max-width: 640px) {
 .content {
+    max-width: 360px;
+    flex-wrap: wrap;
+    margin-top: 40px;
+ }
+}
+
+@media (min-width: 641px) and (max-width: 1199px) {
+.content {
+  justify-content: center;
+  max-width: 760px;
+  padding: 0 35px;
+ }
+}
+.content {
+  max-width: 1200px;
+  margin: auto;
+  margin-top: 58px;
+  padding: 0 15px;
   display: flex;
   justify-content: space-between;
-}
+  }
+@media (max-width: 640px) {
 .main-content {
-  width: 778px;
-  margin-top: 64px;
+  margin-bottom: 45px;
+  max-width: 360px;
+ }
+}
+
+@media (min-width: 641px) and (max-width: 1199px), (min-width: 641px) and (max-width: 1199px) and (orientation: landscape) {
+.main-content {
+    width: calc(100% - 300px);
+ }
+}
+
+.main-content {
+    margin-bottom: 63px;
+    max-width: 100%;
 }
 
 .trends-container {
@@ -102,6 +335,42 @@
 .top-section-content {
  display: block;
  margin-top: 55px;
+}
+
+@media (max-width: 640px) {
+  .trending-post {
+  width: 100%;
+  height: 48vmax;
+ }
+}
+@media (max-width: 640px) {
+.top-section-caption {
+  font-size: 16px;
+ }
+}
+
+@media (min-width: 641px) and (max-width: 1199px) {
+.top-section-caption {
+  font-size: 18px;
+ }
+}
+@media (min-width: 641px) and (max-width: 1199px) {
+ .trending-post {
+  width: 49.75%;
+ height: 24vmax;
+ }
+}
+
+@media (min-width: 1200px) {
+.top-section-caption {
+  font-size: 20px;
+ }
+}
+@media (min-width: 1200px) {
+ .trending-post {
+  width: 24.75%;
+  height: 20vmax;
+ }
 }
 
 .top-section-caption {
@@ -132,13 +401,6 @@ display: flex;
 justify-content: space-between;
 padding-top: 26px;
 padding-bottom: 60px;
-}
-
-@media (min-width: 1200px) {
-.trending-post {
-	width: 24.75%;
-  height: 20vmax;
- }
 }
 
 .trending-post {
@@ -252,6 +514,17 @@ text-transform: uppercase;
   flex-wrap: wrap;
 }
 
+@media (max-width: 640px) {
+.trend-title {
+    font-size: 16px;
+    line-height: 1.2;
+  }
+}
+@media (min-width: 641px) and (max-width: 1199px) {
+.trend-title {
+    font-size: 17px;
+ }
+}
 @media (min-width: 1200px) {
   .trend-title {
     font-size: 20px;
@@ -272,6 +545,7 @@ text-transform: uppercase;
   font-size: 13px;
   font-family: open-sans-b, sans-serif;
 }
+
 
 .bottom-section-content {
   margin-top: 63px;
@@ -316,7 +590,6 @@ text-transform: uppercase;
 }
  .bottom-body {
   max-width: 1200px;
-  margin: auto;
   padding: 0 15px;
   display: flex;
   flex-wrap: nowrap;
@@ -371,6 +644,7 @@ text-transform: uppercase;
 font-family: OpenSans-Bold, sans-serif;
 font-size: 14px;
 }
+
 .product-content-title {
 font-family: OpenSans-Bold, sans-serif;
 margin-top: 0;
@@ -378,6 +652,7 @@ margin-bottom: 10px;
 font-size: 18px;
 line-height: 1.3;
 text-transform: uppercase;
+
 }
 .preview-title {
   margin-top: 10px;
@@ -470,21 +745,7 @@ display: -webkit-box;
   border-image: initial;
  }
 
- .product-content-title {
-  display: flex;
-  position: relative;
-  
-  align-items: center;
-  font-family: open-sans-b, sans-serif;
-  font-size: 20px;
-  color: #0f0d0e; 
-  text-decoration: none;
-  text-transform: uppercase;
-
-  margin-top: 54px;
-  margin-bottom: 15px;
- }
-
+ 
 .bottom-content-text {
   font-family: open-sans-b, sans-serif;
   font-size: 15px;
@@ -495,12 +756,33 @@ display: -webkit-box;
   margin-top: 54px;
   margin-bottom: 15px;
 }
+
+@media (max-width: 640px) {
+.left-section-content {
+    flex-direction: column;
+    margin-right: auto;
+ }
+}
 .left-section-content {
   display: flex;
   align-items: flex-start;
   margin-bottom: 56px;
 }
+
+@media (max-width: 640px) {
+.wrapper, .left-content {
+    padding: 0;
+ }
+}
+@media (min-width: 641px) and (max-width: 1199px), (min-width: 641px) and (max-width: 1199px) and (orientation: landscape){
+.wrapper, .left-content {
+    padding-left: 0;
+    padding-right: 0;
+    margin: 0;
+ }
+}
 .wrapper {
+  margin-bottom: 10px;
   width: 381px;
 }
 .left-content-picture {
@@ -562,6 +844,7 @@ display: -webkit-box;
 .side-content {
  width: 272px;
   margin-top: 60px;
+  margin-left: 130px;
 }
 
 .right-section-caption {
